# zkvm-dynamo-jolt

./: .gitignore  AUDIT_LOG.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY_AUDIT.md  SPEC.md  TECHNICAL_SPEC.md  TEST_COMMIT_MIP.md  TEST_COMMIT_MIP.txt  TEST_COMMIT_MSP.md  TEST_COMMIT_MSP.txt  TEST_COMMIT_MSP_FINAL.txt  alpha_test_20260410.txt  alpha_test_20260410_v2.txt  cluster_test_04B1.txt  cluster_test_04B1_20260410_1515.txt  cluster_test_06B1.txt  cluster_test_06B1_20260410_1516.txt  cluster_test_alpha.txt  cluster_test_msp.txt  connectivity_test_alpha.txt  connectivity_test_mip.txt  guarantee_7806685.sh  hello.elf  mmp_test_20260410.txt  mrr.elf  mrr.rs  run_guest_crate.sh  security_audit.md  test_alpha_1515.txt  test_commit.txt  test_commit_alpha.txt  test_commit_mip_20260410.txt
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml  test.yml
compiler-frontend/: Cargo.toml
compiler-frontend/src/: lib.rs
crates/compiler-frontend/: Cargo.toml
crates/compiler-frontend/src/: lib.rs
crates/dynamo-invariants/: Cargo.toml
crates/hardened-elf-loader/: Cargo.toml
crates/hardened-elf-loader/src/: lib.rs
crates/jolt-sumcheck/src/: lib.rs  protocol.rs  sumcheck.rs
crates/rv32im-decoder/: Cargo.toml
crates/rv32im-decoder/src/: decoder.rs  error.rs  i_extension.rs  instruction.rs  lib.rs  m_extension.rs  main.rs  types.rs  zkvm.rs
crates/rv32im-decoder/src/decode/: m_extension.rs  mod.rs
crates/rv32im-decoder/src/decoder/: fields.rs  rv32m.rs
crates/rv32im-decoder/src/isa/: mod.rs  opcode.rs
crates/rv32im-decoder/src/isa/i/: mod.rs
crates/rv32im-decoder/src/isa/m/: mod.rs
crates/rv32im-decoder/src/verify/: lemma_6_1_1.rs
crates/zeroos-mem/src/: address.rs  lib.rs
crates/zkvm-core/: Cargo.toml
crates/zkvm-core/src/: decoder.rs  elf_loader.rs  lib.rs  vm.rs
docs/: security_audit.md  spec.md
dynamo-invariants/: Cargo.toml
dynamo-invariants/src/: lib.rs
examples/hello_world/: Cargo.toml  memory.x
examples/hello_world/src/: main.rs
guest/: Cargo.toml
guest/src/: main.rs
guests/hello-world/: Cargo.toml
guests/hello-world/.cargo/: config.toml
guests/hello-world/src/: main.rs
hardened-elf-loader/: Cargo.toml
hardened-elf-loader/src/: lib.rs
jolt-sumcheck/: Cargo.toml
jolt-sumcheck/src/: lib.rs  sumcheck.rs
rv32im-decoder/: Cargo.toml  README.md
rv32im-decoder-cli/: Cargo.toml
rv32im-decoder-cli/src/: main.rs
rv32im-decoder/docs/: architecture.md
rv32im-decoder/src/: base_i.rs  bitfield.rs  bits.rs  cli.rs  compat.rs  decode.rs  decoded.rs  decoder.rs  encoding.rs  error.rs  fields.rs  format.rs  formats.rs  i_extension.rs  imm.rs  immediate.rs  instruction.rs  invariants.rs  lib.rs  limb16.rs  limbs.rs  m_extension.rs  main.rs  mul.rs  opcode.rs  opcodes.rs  register.rs  selectors.rs  tests.rs  types.rs  util.rs  validate.rs  word.rs
rv32im-decoder/src/decode/: base.rs  dispatch.rs  i.rs  m.rs  m_extension.rs  mod.rs  rv32i.rs  rv32m.rs  system.rs  types.rs  util.rs
rv32im-decoder/src/decoder/: base.rs  base_i.rs  fields.rs  invariants.rs  m_ext.rs  m_extension.rs  mod.rs  rv32i.rs  rv32m.rs  sign_ext.rs
rv32im-decoder/src/extensions/: base_i.rs  i.rs  i_ext.rs  i_extension.rs  m.rs  m_ext.rs  m_extension.rs  mod.rs
rv32im-decoder/src/isa/: basei.rs  mext.rs  mod.rs
rv32im-decoder/tests/: base_i_decode.rs  cli_smoke.rs  decode.rs  decode_base.rs  decode_i.rs  decode_m.rs  decode_m_extension.rs  decode_utf8_integrity.rs  limb16.rs  m_extension_decode.rs  m_extension_tests.rs
src/: main.rs
tests/: integration_tests.rs  invariants.rs  sumcheck.rs  zeroos_mem.rs
zeroos-mem/: Cargo.toml
zeroos-mem/src/: address.rs  lib.rs
zkvm-core/: Cargo.toml
zkvm-core/examples/: hello_world.rs
zkvm-core/src/: config.rs  decoder.rs  elf_loader.rs  error.rs  frontend.rs  instruction.rs  lib.rs  main.rs  proof.rs  types.rs  vm.rs
zkvm-core/src/decoder/: error.rs  instruction.rs  mod.rs
zkvm-core/tests/: invariants.rs  rv32m_execute.rs  sumcheck.rs  vm_m_extension.rs  zeroos_mem.rs
zkvm-guest/: Cargo.toml
zkvm-guest/src/: main.rs
