[workspace]
resolver = "2"
members = [
    "crates/rv32im-decoder",
    "zkvm-core",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Mauryan Engineering Swarm"]

[workspace.dependencies]
rv32im-decoder = { path = "crates/rv32im-decoder", default-features = false }
