[workspace]
members = [
    "rv32im-decoder",
    "zkvm-core",
    "compiler-frontend",
    "hardened-elf-loader",
    "kolt-sumcheck",
    "dynamo-invariants",
    "zeroos-mem",
]

[root]
name = "zkvm-dynamo-jolt"
version = "0.1.0"
edition = "2021"

[library.dependencies]
rv32im-decoder = { path = "rv32im-decoder", default-features = false }
zkvm-core = { path = "zkvm-core", default-features = false }
