[package]
name = "rv32im-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Modular RV32IM instruction decoder for zkVM components"

[lib]
name = "rv32im_decoder"
path = "src/lib.rs"

[[bin]]
name = "rv32im-decoder"
path = "src/main.rs"

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
