[package]
name = "rv32im-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "rv32im_decoder"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
