[package]
name = "zkvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
dynamo-invariants = { path = "../dynamo-invariants" }
jolt-sumcheck = { path = "../jolt-sumcheck" }
zeroos-mem = { path = "../zeroos-mem" }
