[package]
name = "zkvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
ark-ec.workspace = true
ark-bn254.workspace = true
dynamo-invariants.workspace = true
jolt-sumcheck.workspace = true
zeroos-mem.workspace = true
goblin.workspace = true
elf.workspace = true
sha2.workspace = true
rv32im-decoder.workspace = true
