[package]
name = "zkvm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
goblin = { workspace = true }
elf = { workspace = true }